--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))"
+    "engine: sa.Engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))"
    ],
    "metadata": {
     "collapsed": false
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "source": [
-    "new_curses = [\n",
+    "new_curses: list[dict[str: int | str]] = [\n",
     "    # {\"id_curso\": 11119, \"nm_curso\": \"Playbook de Vendas: Capitalização\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 11120, \"nm_curso\": \"Playbook de Vendas: Consórcio\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 11121, \"nm_curso\": \"Playbook de Vendas: Previdência\", \"hr_curso\": 1},\n",
@@ -54,9 +54,7 @@
     "    # {\"id_curso\": 203844, \"nm_curso\": \"dicas práticas de acessibilidade em ambientes de aprendizagem\", \"hr_curso\": 4},\n",
     "]\n",
     "\n",
-    "df_inserted = pd.DataFrame(new_curses)\n",
-    "\n",
-    "rows_inserted = df_inserted.to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
+    "rows_inserted: int = pd.DataFrame(new_curses).to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foi(ram) {rows_inserted} registro(s) inserido(s) com sucesso!\")"
    ],
    "metadata": {
@@ -68,12 +66,7 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
-    "\n",
-    "df_sorted.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
-    "df_sorted"
-   ],
+   "source": "pd.read_sql(sql=sa.text(\"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id_curso\"), con=engine)",
    "metadata": {
     "collapsed": false
    },
@@ -85,15 +78,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "stmt = \"\"\"\n",
-    "    SELECT id_curso, nm_curso, hr_curso FROM unibb WHERE nm_curso IN (\n",
+    "stmt: str = \"\"\"\n",
+    "    SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb WHERE nm_curso IN (\n",
     "        SELECT nm_curso FROM unibb GROUP BY nm_curso HAVING COUNT(nm_curso) > 1\n",
     "    ) ORDER BY nm_curso, id_curso\n",
     "\"\"\"\n",
-    "df_duplicate = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
-    "\n",
-    "df_duplicate.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
-    "df_duplicate"
+    "pd.read_sql(sql=sa.text(stmt), con=engine)"
    ],
    "id": "1ae431f48f56068b",
    "outputs": [],
