--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
     "\n",
-    "engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))"
+    "engine: sa.Engine = sa.create_engine(os.getenv(\"URL_MYSQL\"))"
    ],
    "metadata": {
     "collapsed": false
@@ -27,13 +27,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "new = [\n",
-    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
+    "new: list[dict[str: int | str | bool]] = [\n",
+    "    # {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
     "]\n",
     "\n",
-    "df_new = pd.DataFrame(new)\n",
-    "\n",
-    "rows_inserted = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
+    "rows_inserted: int = pd.DataFrame(new).to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foram {rows_inserted} jogo(s) inserido(s) com sucesso!\")"
    ],
    "id": "d5c824bcb6c8517d",
@@ -44,7 +42,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_last = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
+    "df_last: pd.DataFrame = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
@@ -61,7 +59,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "minhas_apostas = (\n",
+    "minhas_apostas: tuple = (\n",
     "    \"05 15 26 27 46 53\",  # aposta n.° 1\n",
     "    \"03 12 19 20 45 47\",  # aposta n.° 2\n",
     "    \"01 10 17 41 42 56\",  # aposta n.° 3\n",
@@ -98,12 +96,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "mega = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": []}\n",
+    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": []}\n",
     "\n",
     "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
     "    for aposta in minhas_apostas:\n",
-    "        bolas = aposta.split()\n",
-    "        match = []\n",
+    "        bolas: list[str] = aposta.split()\n",
+    "        match: list[str] = []\n",
     "        for x in range(6):\n",
     "            if bolas[x] in row[2]:\n",
     "                match.append(bolas[x])\n",
@@ -124,12 +122,12 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sua_aposta = \"12 14 31 45 50 60\"\n",
+    "sua_aposta: str = \"12 14 31 45 50 60\"\n",
     "\n",
-    "mega = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": []}\n",
+    "mega: dict[str: list] = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": []}\n",
     "\n",
     "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
-    "    match = []\n",
+    "    match: list[str] = []\n",
     "    for aposta in sua_aposta.split():\n",
     "        if aposta in row[2]:\n",
     "            match.append(aposta)\n",
@@ -149,14 +147,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "stmt = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
-    "df_mega_da_virada = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "stmt:str = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
     "\n",
+    "df_mega_da_virada: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
     "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
     "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
-    "\n",
     "df_mega_da_virada"
    ],
    "id": "3b429bb621446a6e",
@@ -167,21 +164,21 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "mega = {}\n",
+    "apostas: dict[int: int] = {}\n",
     "\n",
     "for x in minhas_apostas:\n",
-    "    y = x.split()\n",
+    "    y: list[str] = x.split()\n",
     "    for z in range(len(y)):\n",
     "        try:\n",
-    "            mega[int(y[z])] += 1\n",
+    "            apostas[int(y[z])] += 1\n",
     "        except KeyError:\n",
-    "            mega[int(y[z])] = 1\n",
+    "            apostas[int(y[z])] = 1\n",
     "\n",
-    "mega = {k: v for k, v in sorted(mega.items(), key=lambda r: r[0])}\n",
+    "apostas_ordenadas: dict[int: int] = {k: v for k, v in sorted(apostas.items(), key=lambda r: r[0])}\n",
     "\n",
-    "mega = pd.DataFrame(data=mega, index=[\"acertos\"], columns=mega.keys())\n",
-    "mega.index.name = \"bolas\"\n",
-    "mega"
+    "acertos: pd.DataFrame = pd.DataFrame(data=apostas_ordenadas, index=[\"acertos\"], columns=apostas_ordenadas.keys())\n",
+    "acertos.index.name = \"bolas\"\n",
+    "acertos"
    ],
    "id": "af6dd213e65fe3f3",
    "outputs": [],
