--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -26,7 +26,7 @@
     "    # {\"id_curso\": 11119, \"nm_curso\": \"Playbook de Vendas: Capitalização\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 11120, \"nm_curso\": \"Playbook de Vendas: Consórcio\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 11121, \"nm_curso\": \"Playbook de Vendas: Previdência\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11122, \"nm_curso\": \"Playbook de Vendas: Seguro pra Vida\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11122, \"nm_curso\": \"Playbook de Vendas: Seguro para Vida\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 11123, \"nm_curso\": \"Playbook de Vendas: Seguro Prestamista\", \"hr_curso\": 1},\n",
     "    # {\"id_curso\": 201421, \"nm_curso\": \"Gestão de produtos digitais: Product Discovery\", \"hr_curso\": 6},\n",
     "    # {\"id_curso\": 201629, \"nm_curso\": \"Integração Contínua: mais qualidade e menos risco no desenvolvimento\", \"hr_curso\": 6},\n",
@@ -52,6 +52,27 @@
     "    # {\"id_curso\": 203078, \"nm_curso\": \"UX Writing: projetando um chatbot\", \"hr_curso\": 8},\n",
     "    # {\"id_curso\": 203167, \"nm_curso\": \"Inteligência Artificial e UX: otimize a construção de um produto digital\", \"hr_curso\": 8},\n",
     "    # {\"id_curso\": 203844, \"nm_curso\": \"dicas práticas de acessibilidade em ambientes de aprendizagem\", \"hr_curso\": 4},\n",
+    "    # {\"id_curso\": 12327, \"nm_curso\": \"Direito do Consumidor\", \"hr_curso\": 2},\n",
+    "    # {\"id_curso\": 8996, \"nm_curso\": \"Roda de Conversa 1 - Saúde Mental - Game 2 - Plano Ação\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 8997, \"nm_curso\": \"Roda de Conversa 2 - Avaliação de Reação\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 8998, \"nm_curso\": \"Roda de Conversa 3 - Avaliação de Reação\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11112, \"nm_curso\": \"Sapiência - Outubro rosa - Previna-se contra o câncer de mama!\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11496, \"nm_curso\": \"Sapiência - Assédio no Ambiente de Trabalho\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11586, \"nm_curso\": \"Sapiência - Cuide mais de você\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11587, \"nm_curso\": \"Sapiência - Desafios: como lidar com eles\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11588, \"nm_curso\": \"Sapiência - Felicidade no trabalho\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11589, \"nm_curso\": \"Use seu cérebro e mude seus hábitos\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11590, \"nm_curso\": \"Home office com conforto\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11591, \"nm_curso\": \"Sapiência - Foco e disciplina: comportamentos para produtividade e resultados\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11593, \"nm_curso\": \"Simplicidade: como focar no que é importante\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11594, \"nm_curso\": \"Lidando com o imprevisível\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11595, \"nm_curso\": \"Cuidados com o sono\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11596, \"nm_curso\": \"Alimentação e saúde no trabalho\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11597, \"nm_curso\": \"Equilíbrio entre vida pessoal e profissional\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11655, \"nm_curso\": \"Saúde da Mulher\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11733, \"nm_curso\": \"Segurança Psicológica: reflexões no ambiente de trabalho\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 12027, \"nm_curso\": \"Impactos da Saúde Financeira na Saúde Mental\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 12298, \"nm_curso\": \"Estratégias de Enfrentamento\", \"hr_curso\": 1},\n",
     "]\n",
     "\n",
     "rows_inserted: int = pd.DataFrame(new_curses).to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
@@ -66,7 +87,10 @@
   },
   {
    "cell_type": "code",
-   "source": "pd.read_sql(sql=sa.text(\"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id_curso\"), con=engine)",
+   "source": [
+    "pd.read_sql(sql=sa.text(\"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id_curso\"),\n",
+    "            con=engine)"
+   ],
    "metadata": {
     "collapsed": false
    },
