--- a/jupyter/Contracheque BB.ipynb
+++ b/jupyter/Contracheque BB.ipynb
@@ -27,26 +27,6 @@
   },
   {
    "cell_type": "code",
-   "id": "95cf26a6d2f155e5",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "source": [
-    "releases: list[dict[str: str]] = [\n",
-    "    # {\"nm_curso\": \"...\"},\n",
-    "]\n",
-    "\n",
-    "rows_inserted: int = pd.DataFrame(releases).to_sql(name=\"lançamentos\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {rows_inserted} registros inseridos com sucesso.\")"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
    "id": "f0eea38d422d58ae",
    "metadata": {
     "collapsed": false,
@@ -59,32 +39,14 @@
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "22e4d78a31b58e76",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "source": [
-    "paychecks: list[dict[str: int | bool | float]] = [\n",
-    "    # {\"id_lançamento\": 36, \"período\": 202407, \"acerto\": True, \"valor\": -84.31},\n",
-    "    # {\"id_lançamento\": 40, \"período\": 202407, \"acerto\": True, \"valor\": -22.4},\n",
-    "    # {\"id_lançamento\": 1, \"período\": 202407, \"acerto\": False, \"valor\": 4523.22},\n",
-    "    # {\"id_lançamento\": 2, \"período\": 202407, \"acerto\": False, \"valor\": 1258.46},\n",
-    "    # {\"id_lançamento\": 26, \"período\": 202407, \"acerto\": False, \"valor\": 2649.73},\n",
-    "    # {\"id_lançamento\": 38, \"período\": 202407, \"acerto\": False, \"valor\": -321.23},\n",
-    "    # {\"id_lançamento\": 42, \"período\": 202407, \"acerto\": False, \"valor\": -590.19},\n",
-    "    # {\"id_lançamento\": 43, \"período\": 202407, \"acerto\": False, \"valor\": -168.62},\n",
-    "    # {\"id_lançamento\": 48, \"período\": 202407, \"acerto\": False, \"valor\": -463.71},\n",
-    "    # {\"id_lançamento\": 50, \"período\": 202407, \"acerto\": False, \"valor\": -908.86},\n",
-    "    # {\"id_lançamento\": 53, \"período\": 202407, \"acerto\": False, \"valor\": -859.75},\n",
-    "]\n",
-    "\n",
-    "row_paychecks: int = pd.DataFrame(paychecks).to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {row_paychecks} registros inseridos com sucesso.\")"
+    "df_new: pd.DataFrame = pd.read_csv(\"../src/espelho.csv\", encoding=\"utf-8-sig\")\n",
+    "rows_inserted: int = df_new.to_sql(name=\"espelho\", con=engine, if_exists=\"append\", index=False)\n",
+    "print(f\"Foi(ram) {rows_inserted} lançamento(s) inserido(s) com sucesso.\")"
    ],
+   "id": "95cf26a6d2f155e5",
    "outputs": [],
    "execution_count": null
   },
@@ -98,7 +60,7 @@
     }
    },
    "source": [
-    "period: int = datetime.now().year * 100 + datetime.now().month\n",
+    "period: int = datetime.now().year*100 + datetime.now().month\n",
     "\n",
     "stmt: str = f\"\"\"\n",
     "    SELECT\n",
@@ -127,7 +89,7 @@
    "id": "726e83d28aec70b6",
    "metadata": {},
    "source": [
-    "ano: int = datetime.now().year\n",
+    "year: int = datetime.now().year\n",
     "\n",
     "stmt: str = f\"\"\"\n",
     "    SELECT\n",
@@ -139,7 +101,7 @@
     "        espelho e\n",
     "        INNER JOIN lançamento l ON e.id_lançamento = l.id_lançamento\n",
     "    WHERE\n",
-    "        e.período LIKE '{ano}%'\n",
+    "        e.período LIKE '{year}%'\n",
     "\"\"\"\n",
     "\n",
     "df_ano: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
@@ -156,9 +118,9 @@
     "df_ano.iloc[-1, 0] = \"Sumário\"\n",
     "df_ano.set_index([\"lançamento\"], inplace=True)\n",
     "df_ano.rename(columns={\n",
-    "    int(f\"{ano}01\"): \"jan\", int(f\"{ano}02\"): \"fev\", int(f\"{ano}03\"): \"mar\", int(f\"{ano}04\"): \"abr\",\n",
-    "    int(f\"{ano}05\"): \"mai\", int(f\"{ano}06\"): \"jun\", int(f\"{ano}07\"): \"jul\", int(f\"{ano}08\"): \"ago\",\n",
-    "    int(f\"{ano}09\"): \"set\", int(f\"{ano}10\"): \"out\", int(f\"{ano}11\"): \"nov\", int(f\"{ano}12\"): \"dez\",\n",
+    "    int(f\"{year}01\"): \"jan\", int(f\"{year}02\"): \"fev\", int(f\"{year}03\"): \"mar\", int(f\"{year}04\"): \"abr\",\n",
+    "    int(f\"{year}05\"): \"mai\", int(f\"{year}06\"): \"jun\", int(f\"{year}07\"): \"jul\", int(f\"{year}08\"): \"ago\",\n",
+    "    int(f\"{year}09\"): \"set\", int(f\"{year}10\"): \"out\", int(f\"{year}11\"): \"nov\", int(f\"{year}12\"): \"dez\",\n",
     "}, inplace=True)\n",
     "df_ano"
    ],
@@ -204,13 +166,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "ano: int = datetime.now().year\n",
+    "year: int = datetime.now().year\n",
     "\n",
     "plt.figure(figsize=(16, 6))\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "ax: plt.Axes = sns.barplot(data=df_anuais.loc[[ano], df_anuais.columns[:-2]])\n",
-    "ax.set_title(f\"Espelho {ano}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
+    "ax: plt.Axes = sns.barplot(data=df_anuais.loc[[year], df_anuais.columns[:-2]])\n",
+    "ax.set_title(f\"Espelho {year}\", loc=\"center\", fontweight=\"bold\", fontsize=12)\n",
     "ax.set(xlabel=\"\", ylabel=\"\", yticks=[])\n",
     "\n",
     "for mes in range(12):\n",
