--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -22,61 +22,13 @@
   {
    "cell_type": "code",
    "source": [
-    "new_curses: list[dict[str: int | str]] = [\n",
-    "    # {\"id_curso\": 11119, \"nm_curso\": \"Playbook de Vendas: Capitalização\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11120, \"nm_curso\": \"Playbook de Vendas: Consórcio\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11121, \"nm_curso\": \"Playbook de Vendas: Previdência\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11122, \"nm_curso\": \"Playbook de Vendas: Seguro para Vida\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11123, \"nm_curso\": \"Playbook de Vendas: Seguro Prestamista\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 201421, \"nm_curso\": \"Gestão de produtos digitais: Product Discovery\", \"hr_curso\": 6},\n",
-    "    # {\"id_curso\": 201629, \"nm_curso\": \"Integração Contínua: mais qualidade e menos risco no desenvolvimento\", \"hr_curso\": 6},\n",
-    "    # {\"id_curso\": 201718, \"nm_curso\": \"UX: metodologias práticas para designers\", \"hr_curso\": 10},\n",
-    "    # {\"id_curso\": 201799, \"nm_curso\": \"Árvores de Decisão: aprofundando em modelos de Machine Learning\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202191, \"nm_curso\": \"TypeScript parte 2: avançando na linguagem\", \"hr_curso\": 10},\n",
-    "    # {\"id_curso\": 202192, \"nm_curso\": \"TypeScript parte 3: mais técnicas e boas práticas\", \"hr_curso\": 10},\n",
-    "    # {\"id_curso\": 202384, \"nm_curso\": \"UX Writing: escrevendo textos para usuários\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202392, \"nm_curso\": \"React: integrando seu projeto React com APIs\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202423, \"nm_curso\": \"Modelos preditivos em dados: detecção de fraude\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202477, \"nm_curso\": \"RoadMap: como criar e manter o mapa de produto\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202479, \"nm_curso\": \"React: otimizando a performance\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202525, \"nm_curso\": \"Estratégia Omnichannel: aumentando suas vendas\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202608, \"nm_curso\": \"Value Stream Mapping (VSM): conheça o mapeamento de Fluxo de Valor\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202692, \"nm_curso\": \"Cultura e Métodos Ágeis: pilares para uma imersão avançada\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202698, \"nm_curso\": \"Segurança de rede: firewall, WAF e SIEM\", \"hr_curso\": 10},\n",
-    "    # {\"id_curso\": 202704, \"nm_curso\": \"Design da proposta de valor: transformando produtos e serviços\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202716, \"nm_curso\": \"User interface: conceitos de UI para product Designers\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202745, \"nm_curso\": \"Ágil Escalado: conheça frameworks para grandes desenvolvimentos\", \"hr_curso\": 6},\n",
-    "    # {\"id_curso\": 202782, \"nm_curso\": \"Lean-Ágil: expanda horizontes para a organização toda\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202858, \"nm_curso\": \"JAVA: criando a sua primeira aplicação\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 202859, \"nm_curso\": \"UX Design: entenda a área da User Experience\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 203078, \"nm_curso\": \"UX Writing: projetando um chatbot\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 203167, \"nm_curso\": \"Inteligência Artificial e UX: otimize a construção de um produto digital\", \"hr_curso\": 8},\n",
-    "    # {\"id_curso\": 203844, \"nm_curso\": \"dicas práticas de acessibilidade em ambientes de aprendizagem\", \"hr_curso\": 4},\n",
-    "    # {\"id_curso\": 12327, \"nm_curso\": \"Direito do Consumidor\", \"hr_curso\": 2},\n",
-    "    # {\"id_curso\": 8996, \"nm_curso\": \"Roda de Conversa 1 - Saúde Mental - Game 2 - Plano Ação\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 8997, \"nm_curso\": \"Roda de Conversa 2 - Avaliação de Reação\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 8998, \"nm_curso\": \"Roda de Conversa 3 - Avaliação de Reação\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11112, \"nm_curso\": \"Sapiência - Outubro rosa - Previna-se contra o câncer de mama!\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11496, \"nm_curso\": \"Sapiência - Assédio no Ambiente de Trabalho\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11586, \"nm_curso\": \"Sapiência - Cuide mais de você\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11587, \"nm_curso\": \"Sapiência - Desafios: como lidar com eles\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11588, \"nm_curso\": \"Sapiência - Felicidade no trabalho\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11589, \"nm_curso\": \"Use seu cérebro e mude seus hábitos\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11590, \"nm_curso\": \"Home office com conforto\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11591, \"nm_curso\": \"Sapiência - Foco e disciplina: comportamentos para produtividade e resultados\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11593, \"nm_curso\": \"Simplicidade: como focar no que é importante\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11594, \"nm_curso\": \"Lidando com o imprevisível\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11595, \"nm_curso\": \"Cuidados com o sono\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11596, \"nm_curso\": \"Alimentação e saúde no trabalho\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11597, \"nm_curso\": \"Equilíbrio entre vida pessoal e profissional\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11655, \"nm_curso\": \"Saúde da Mulher\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 11733, \"nm_curso\": \"Segurança Psicológica: reflexões no ambiente de trabalho\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 12027, \"nm_curso\": \"Impactos da Saúde Financeira na Saúde Mental\", \"hr_curso\": 1},\n",
-    "    # {\"id_curso\": 12298, \"nm_curso\": \"Estratégias de Enfrentamento\", \"hr_curso\": 1},\n",
-    "]\n",
-    "\n",
-    "rows_inserted: int = pd.DataFrame(new_curses).to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foi(ram) {rows_inserted} registro(s) inserido(s) com sucesso!\")"
+    "try:\n",
+    "    row_inserted: int = pd.read_csv(\"../src/unibb.csv\", encoding=\"utf-8-sig\").to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
+    "    print(f\"Foi(ram) {row_inserted} registro(s) inserido(s) com sucesso!\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Erro ao localizar um arquivo .CSV...\")\n",
+    "except UnicodeEncodeError:\n",
+    "    print(\"Erro ao decodificar um arquivo .CSV...\")"
    ],
    "metadata": {
     "collapsed": false
@@ -88,13 +40,24 @@
   {
    "cell_type": "code",
    "source": [
-    "pd.read_sql(sql=sa.text(\"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id_curso\"),\n",
-    "            con=engine)"
+    "stmt: str = \"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id_curso\"\n",
+    "pd.read_sql(sql=sa.text(stmt), con=engine)"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "e8dc9b2b6f48e0c3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "stmt: str = \"SELECT id_curso AS Código, nm_curso AS Curso, hr_curso AS Horas FROM unibb ORDER BY id\"\n",
+    "pd.read_sql(sql=sa.text(stmt), con=engine)"
+   ],
+   "id": "694e58162ae1bc19",
    "outputs": [],
    "execution_count": null
   },
