--- a/jupyter/Jogos da Megasena.ipynb
+++ b/jupyter/Jogos da Megasena.ipynb
@@ -27,12 +27,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "new: list[dict[str: int | str | bool]] = [\n",
-    "    # {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
-    "]\n",
+    "df_new: pd.DataFrame = pd.read_csv(\"../src/megasena.csv\", encoding=\"utf-8-sig\")\n",
     "\n",
-    "rows_inserted: int = pd.DataFrame(new).to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {rows_inserted} jogo(s) inserido(s) com sucesso!\")"
+    "row_inserted: int = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
+    "print(f\"Foram {row_inserted} jogo(s) inserido(s) com sucesso!\")"
    ],
    "id": "d5c824bcb6c8517d",
    "outputs": [],
@@ -150,10 +148,12 @@
     "stmt:str = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
     "\n",
     "df_mega_da_virada: pd.DataFrame = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
     "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
     "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
+    "\n",
     "df_mega_da_virada"
    ],
    "id": "3b429bb621446a6e",
