--- a/jupyter/Jogos da Megasena.ipynb
+++ b/jupyter/Jogos da Megasena.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "df_new: pd.DataFrame = pd.read_csv(\"../src/megasena.csv\", encoding=\"utf-8-sig\")\n",
+    "df_new: pd.DataFrame = pd.read_csv(\"./src/megasena.csv\", sep=\";\", encoding=\"utf-8-sig\")\n",
     "\n",
     "row_inserted: int = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
     "print(f\"Foram {row_inserted} jogo(s) inserido(s) com sucesso!\")"
